End Of Monday Commit

--- a/modularity1.html
+++ b/modularity1.html
@@ -19,7 +19,7 @@
 	    		<p class="instruction-text">Style a table full of data so that it looks nicer than the brower defaults.</p>
 					<div class="instruction-answer">
 						<!-- Edit here -->
-						<table>
+						<table class="table-bordered">
 							<tr>
 								<td>0</td>
 								<td>Sean</td>
@@ -45,7 +45,7 @@
 	    		<p class="instruction-text">It should also handle header rows...</p>
 					<div class="instruction-answer">
 						<!-- Edit here -->
-						<table>
+						<table class="table-bordered">
 							<thead>
 								<tr>
 									<th>#</th>
@@ -86,12 +86,12 @@
 	    		<p class="instruction-text">Three columns, three prominent numbers, three small labels</p>
 					<div class="instruction-answer">
 			    	<!-- Edit here -->
-			    	<table>
+			    	<table class="stats-bordered">
 			    		<tbody>
 			    			<tr>
-			    				<td><div>7</div><div>followers</div></td>
-			    				<td><div>59</div><div>starred</div></td>
-			    				<td><div>28</div><div>following</div></td>
+			    				<td><div class="stats-bordered-boldnumbers">7</div><div  class="stats-bordered-description">followers</div></td>
+			    				<td><div class="stats-bordered-boldnumbers">59</div><div class="stats-bordered-description">starred</div></td>
+			    				<td><div class="stats-bordered-boldnumbers">28</div><div class="stats-bordered-description">following</div></td>
 			    			</tr>
 			    		</tbody>
 			    	</table>
@@ -105,46 +105,46 @@
 	    		<p class="instruction-text">Bar widths are set in the HTML as if they were populated from the back-end. Everything else should be styled with CSS.</p>
 					<div class="instruction-answer">
 			    	<!-- Edit here -->
-			    	<table>
+			    	<table class="bar-chart-table">
 			    		<tr>
-			    			<th>Javascript</th>
-			    			<td><div style="width: 99%">21%</div></td>
+			    			<th class="bar-chart-titles">Javascript</th>
+			    			<td><div class="bar-chart-percentages" style="width: 99%">21%</div></td>
 			    		</tr>
 			    		<tr>
-			    			<th>Ruby</th>
-			    			<td><div style="width: 57.1%">12%</div></td>
+			    			<th class="bar-chart-titles">Ruby</th>
+			    			<td><div class="bar-chart-percentages" style="width: 57.1%">12%</div></td>
 			    		</tr>
 			    		<tr>
-			    			<th>Java</th>
-			    			<td><div style="width: 38.1%">8%</div></td>
+			    			<th class="bar-chart-titles">Java</th>
+			    			<td><div class="bar-chart-percentages" style="width: 38.1%">8%</div></td>
 			    		</tr>
 			    		<tr>
-			    			<th>Python</th>
-			    			<td><div style="width: 38.1%">8%</div></td>
+			    			<th class="bar-chart-titles">Python</th>
+			    			<td><div class="bar-chart-percentages" style="width: 38.1%">8%</div></td>
 			    		</tr>
 			    		<tr>
-			    			<th>Shell</th>
-			    			<td><div style="width: 38.1%">8%</div></td>
+			    			<th class="bar-chart-titles">Shell</th>
+			    			<td><div class="bar-chart-percentages" style="width: 38.1%">8%</div></td>
 			    		</tr>
 			    		<tr>
-			    			<th>PHP</th>
-			    			<td><div style="width: 33.3%">7%</div></td>
+			    			<th class="bar-chart-titles">PHP</th>
+			    			<td><div class="bar-chart-percentages" style="width: 33.3%">7%</div></td>
 			    		</tr>
 			    		<tr>
-			    			<th>C</th>
-			    			<td><div style="width: 28.8%">6%</div></td>
+			    			<th class="bar-chart-titles">C</th>
+			    			<td><div class="bar-chart-percentages" style="width: 28.8%">6%</div></td>
 			    		</tr>
 			    		<tr>
-			    			<th>C++</th>
-			    			<td><div style="width: 23.8%">5%</div></td>
+			    			<th class="bar-chart-titles">C++</th>
+			    			<td><div class="bar-chart-percentages" style="width: 23.8%">5%</div></td>
 			    		</tr>
 			    		<tr>
-			    			<th>Perl</th>
-			    			<td><div style="width: 19.0%">4%</div></td>
+			    			<th class="bar-chart-titles">Perl</th>
+			    			<td><div class="bar-chart-percentages" style="width: 19.0%">4%</div></td>
 			    		</tr>
 			    		<tr>
-			    			<th>Objective-C</th>
-			    			<td><div style="width: 14.3%">3%</div></td>
+			    			<th class="bar-chart-titles">Objective-C</th>
+			    			<td><div class="bar-chart-percentages" style="width: 14.3%">3%</div></td>
 			    		</tr>
 			    	</table>
 				    <!-- End editable area -->
