--- a/modularity1.html
+++ b/modularity1.html
@@ -158,12 +158,12 @@
 					<div class="instruction-answer">
 			    	<!-- Edit here -->
 			    	<div>
-			    		<div>
-				    		<div>
+			    		<div class="cover">
+				    		<div class="lightbox-wrapper popup">
 					    		<h3>Hello</h3>
 						    	<p>Cupcake ipsum dolor sit amet. Gummies lemon drops pastry topping wypas jujubes gummi bears. Cotton candy powder topping bear claw halvah jelly beans bear claw. Chocolate cake ice cream gummies apple pie muffin wafer gummi bears. Cupcake ipsum dolor sit amet. Gummies lemon drops pastry topping wypas jujubes gummi bears. Cotton candy powder topping bear claw halvah jelly beans bear claw. Chocolate cake ice cream gummies apple pie muffin wafer gummi bears.</p>
-						    	<div>
-						    		<a>Close</a>
+						    	<div class="lightbox-close-anchor-box">
+						    		<a class="lightbox-close-anchor">Close</a>
 						    	</div>
 				    		</div>
 				    	</div>
@@ -178,7 +178,7 @@
 	    		<p class="instruction-text">A media block is a left-floated image with some content beside it. Think Facebook updates.</p>
 					<div class="instruction-answer">
 			    	<!-- Edit here -->
-			    	<img src="http://placehold.it/50">
+			    	<img src="http://placehold.it/50" class="media-block-img">
 			    	<p>Cupcake ipsum dolor sit amet. Gummies lemon drops pastry topping wypas jujubes gummi bears. Cotton candy powder topping bear claw halvah jelly beans bear claw. Chocolate cake ice cream gummies apple pie muffin wafer gummi bears.</p>
 				    <!-- End editable area -->
 			    </div>
@@ -188,11 +188,11 @@
 		    	<!-- Edit here -->
 					<div class="instruction-answer">
 			    	<div>
-				    	<img src="http://placehold.it/50">
+				    	<img src="http://placehold.it/50" class="media-block-img">
 				    </div>
 			    	<div>
 				    	<h2>Cupcake Ipsum</h2>
-				    	<p>Cupcake ipsum dolor sit amet. Gummies lemon drops pastry topping wypas jujubes gummi bears. Cotton candy powder topping bear claw halvah jelly beans bear claw. Chocolate cake ice cream gummies apple pie muffin wafer gummi bears.</p>
+				    	<p class="big-cupcake">Cupcake ipsum dolor sit amet. Gummies lemon drops pastry topping wypas jujubes gummi bears. Cotton candy powder topping bear claw halvah jelly beans bear claw. Chocolate cake ice cream gummies apple pie muffin wafer gummi bears.</p>
 				    </div>
 				    <!-- End editable area -->
 				  </div>
@@ -202,26 +202,26 @@
 					<div class="instruction-answer">
 			    	<!-- Edit here -->
 			    	<div>
-				    	<img src="http://placehold.it/50">
+				    	<img src="http://placehold.it/50" class="media-block-img">
 				    </div>
 			    	<div>
 				    	<h2>Cupcake Ipsum</h2>
-				    	<p>Cupcake ipsum dolor sit amet gummies lemon drops pastry topping wypas jujubes gummi bears. Cotton candy powder topping bear claw halvah jelly beans bear claw. Chocolate cake ice cream gummies apple pie muffin wafer gummi bears.</p>
+				    	<p class="big-cupcake">Cupcake ipsum dolor sit amet gummies lemon drops pastry topping wypas jujubes gummi bears. Cotton candy powder topping bear claw halvah jelly beans bear claw. Chocolate cake ice cream gummies apple pie muffin wafer gummi bears.</p>
 
 				    	<div>
-					    	<img src="http://placehold.it/32">
+					    	<img src="http://placehold.it/32" class="media-block-img cupcake">
 					    </div>
 				    	<div>
 					    	<h2>I like cupcakes!</h2>
-					    	<p>Cupcake ipsum dolor sit amet caramels jelly beans. Faworki donut applicake cookie. Apple pie wafer gummies biscuit cupcake gummies pastry.</p>
+					    	<p class="cupcake">Cupcake ipsum dolor sit amet caramels jelly beans. Faworki donut applicake cookie. Apple pie wafer gummies biscuit cupcake gummies pastry.</p>
 					    </div>
 
 				    	<div>
-					    	<img src="http://placehold.it/32">
+					    	<img src="http://placehold.it/32" class="media-block-img cupcake">
 					    </div>
 				    	<div>
 					    	<h2>I like cupcakes, too!</h2>
-					    	<p>Cupcake ipsum dolor sit amet donut lemon drops carrot cake topping bonbon powder sweet roll. Lollipop jujubes bonbon chupa chups jelly beans.</p>
+					    	<p class="cupcake">Cupcake ipsum dolor sit amet donut lemon drops carrot cake topping bonbon powder sweet roll. Lollipop jujubes bonbon chupa chups jelly beans.</p>
 					    </div>
 				    </div>
 				    <!-- End editable area -->
